<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:background="@drawable/background_editor">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="10dp"
        android:hint="@string/author"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAuthor"
        android:layout_marginTop="10dp"
        android:hint="@string/pages"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@+id/editPages"
        android:layout_alignParentEnd="true"
        android:id="@+id/update"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_below="@+id/editPages"
        android:layout_toStartOf="@id/update"
        android:layout_alignParentEnd="false"
        android:id="@+id/delete"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />

</RelativeLayout>