<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@drawable/background_editor">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTitle"
        android:layout_marginTop="10dp"
        android:hint="@string/author"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/editTextPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAuthor"
        android:layout_marginTop="10dp"
        android:hint="@string/pages"
        android:minHeight="48dp"
        android:background="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@+id/editTextPages"
        android:layout_alignParentEnd="true"
        android:id="@+id/add"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />

</RelativeLayout>